[package]
name = "photoscan"
version = "0.1.0"
authors = ["Stefan Wehrmeyer <mail@stefanwehrmeyer.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
image = { version = "0.24.8" }
imageproc = { version = "0.23.0", default-features = false }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
log = "0.4.6"
wasm-logger = "0.2.0"
env_logger = "0.11.0"
js-sys = "0.3.67"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true
